--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,4 @@ spring.mvc.view.suffix=.jsp
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
-
-logging.level.org.springframework.web=debug
+logging.level.org.springframework.web=info
